# TMT-Dashboard

./: CLAUDE.md  CODEBASE_EVALUATION.md  Pytorch_optimized.ipynb  Pytorch_test.ipynb
alpha-pipeline/: .gitignore  environment.yml  pyproject.toml  requirements.txt  run_live.py  run_pipeline.py
alpha-pipeline/notebooks/: 00_sanity_checks.ipynb  01_feature_exploration.ipynb  99_final_backtest.ipynb
alpha-pipeline/src/: __init__.py
alpha-pipeline/src/backtest/: __init__.py  costs.py  vectorized.py
alpha-pipeline/src/config/: __init__.py  defaults.yaml  settings.py
alpha-pipeline/src/data/: __init__.py  cleaners.py  downloader.py  universe.py
alpha-pipeline/src/features/: __init__.py  csi_vpin.py  fracdiff.py  microstructure.py  pipeline.py  technical.py
alpha-pipeline/src/inference/: __init__.py  live_loader.py  predictor.py
alpha-pipeline/src/labeling/: __init__.py  labeling_pipeline.py  meta_labeling.py  triple_barrier.py
alpha-pipeline/src/validation/: __init__.py  metrics.py  purged_walk_forward.py
alpha-pipeline/tests/: __init__.py  test_backtest.py  test_features.py  test_labeling.py  test_validation.py
tmt_optimized/: README.md  __init__.py  feature_engine.py  lstm_model.py  memory_manager.py  mps_accelerator.py  pyproject.toml  requirements.txt
tmt_optimized/rust_core/: Cargo.toml  build.sh
tmt_optimized/rust_core/src/: lib.rs
