[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tmt-optimized"
version = "0.1.0"
description = "High-performance quantitative finance library optimized for Apple Silicon"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "TMT-Dashboard"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["quant", "finance", "lstm", "apple-silicon", "mps", "rust"]

dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "torch>=2.0.0",
    "scikit-learn>=1.2.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "maturin>=1.3.0",
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]
full = [
    "numba>=0.57.0",
    "hmmlearn>=0.3.0",
    "optuna>=3.3.0",
    "yfinance>=0.2.28",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tmt_optimized*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
